--- a/model_building.Rmd
+++ b/model_building.Rmd
@@ -48,6 +48,7 @@ get_model_data <- function(season) {
     left_join(get_dataset(paste(season, 'ridership', sep='_')), by=id_cols) %>%
     mutate( # this first mutate is for any operations where we want to keep the variables that are used
       transfer = case_when(stop_name %in% xfer_station_names ~ 1, .default=0),
+      airbnb_count = case_when(is.na(airbnb_count) ~ 0, .default=airbnb_count),
       cov_tt = sd_tt/avg_tt # coefficient of variation of travel time to CBD
     ) %>%
     mutate( # and this second mutate is for any where we can discard the variables that are used
@@ -80,7 +81,7 @@ model_data_f19 <- get_model_data('f19')
 continuous_vars <- c('avg_boardings', 'avg_headway_wkdy', 'avg_headway_wknd', 
                      'avg_trav_time_to_cbd', 'cov_tt', 'avg_spacing_km', 'walk_score', 
                      'km_from_cbd', 'median_inc_1000s', 'pop_per_acre', 'jobs_per_acre', 
-                     'devl_mix', 'hh_no_vehicle_share', 'avg_veh_per_hh',"airbnb_count")
+                     'devl_mix', 'hh_no_vehicle_share', 'avg_veh_per_hh', 'airbnb_count')
 sparse_vars <- c('connecting_bus_riders_100s', 'connecting_cr_routes',
                  'pnr_spaces_100s', 'college_students_1000s')
 dummy_vars <- c('Red', 'Orange', 'Green', 'Blue', 'transfer', 'terminal', 'in_bos')
@@ -153,7 +154,7 @@ base_reg_full <- function(params) {
        + Red + Orange + Blue + transfer + terminal #+ km_from_cbd
        + connecting_cr_routes + connecting_bus_routes + pnr_spaces_100s
        + walk_score + land_use_entropy_score + walk_score*land_use_entropy_score 
-       + pop_per_acre + jobs_per_acre + median_inc_1000s #+ avg_veh_per_hh 
+       + pop_per_acre + jobs_per_acre + median_inc_1000s #+ avg_veh_per_hh
        , data=params$data %>% 
          rename(avg_headway = .(as.symbol(paste0('avg_headway_', params$daytype))))
      )))
@@ -172,14 +173,22 @@ enhanced_reg_bosonly <- function(params) {
 }
 
 specifications <- list(
-  "Fall 2019 weekday" = list(data=model_data_f19, daytype='wkdy'), 
+  # "Fall 2019 am peak" = list(data=model_data_f19, daytype='wkdy', period='am_peak'), 
+  # "Fall 2023 am peak" = list(data=model_data_f23, daytype='wkdy', period='am_peak'),
+  # "Fall 2019 off peak" = list(data=model_data_f19, daytype='wkdy', period='off_peak'), 
+  # "Fall 2023 off peak" = list(data=model_data_f23, daytype='wkdy', period='off_peak'),
+  # "Fall 2019 pm peak" = list(data=model_data_f19, daytype='wkdy', period='pm_peak'), 
+  # "Fall 2023 pm peak" = list(data=model_data_f23, daytype='wkdy', period='pm_peak'),
+  # "Fall 2019 weekend" = list(data=model_data_f19, daytype='wknd', period='wknd'), 
+  # "Fall 2023 weekend" = list(data=model_data_f23, daytype='wknd', period='wknd')
+  "Fall 2019 weekday" = list(data=model_data_f19, daytype='wkdy'),
   "Fall 2023 weekday" = list(data=model_data_f23, daytype='wkdy'),
-  "Fall 2019 weekend" = list(data=model_data_f19, daytype='wknd'), 
+  "Fall 2019 weekend" = list(data=model_data_f19, daytype='wknd'),
   "Fall 2023 weekend" = list(data=model_data_f23, daytype='wknd')
 )
 
 specifications_bosonly <- specifications %>% 
-  lapply(function(s) {list(data=s$data %>% filter(in_bos == 1), daytype=s$daytype)})
+  lapply(function(s) {list(data=s$data %>% filter(in_bos == 1), daytype=s$daytype, period=s$period)})
 
 base_full_regs <- specifications %>% lapply(base_reg_full) %>%
   `names<-`(names(.) %>% lapply(function(name) paste(name, "base full")))
